# northstar-updater

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
northstar_updater/: __main__.py
tests/: README.md  test_northstar_launcher.py
