[tool.poetry]
name = "northstar-launcher"
version = "0.1.0"
description = ""
authors = ["Yan <me@octonezd.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.27.1"
pyinstaller = "^4.7"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
Nuitka = "^0.6.18"
zstandard = "^0.16.0"
imageio = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
